--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "daisyui": "^5.0.0",
     "postcss": "^8.5.3",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.12",
