--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/vite": "^4.0.1",
     "daisyui": "^5.0.0",
+    "dom-to-image": "^2.6.0",
+    "jspdf": "^3.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.12",
     "tslib": "^2.3.0",
@@ -34,7 +37,9 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/dom-to-image": "^2.6.7",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
