--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@angular/service-worker": "^19.1.0",
     "@primeng/themes": "^19.0.5",
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/vite": "^4.0.1",
